- Added Header - Added Sidebar - Added Layout - Added Product Details component

--- a/siot-app/src/app/shared-module/header/header.component.html
+++ b/siot-app/src/app/shared-module/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<mat-toolbar>
+    <div class="logo-nav">
+        <h1>Product <br>Tracking App</h1>
+        <ul class="sideContainer">
+            <li>Dashboard</li>
+            <li>History</li>
+            <li>Report</li>
+        </ul>
+    </div>
+    <div class="logo-nav">
+        <h2>Profile</h2>
+    </div>
+</mat-toolbar>
