--- a/siot-app/src/app/shared-module/sidebar/sidebar.component.html
+++ b/siot-app/src/app/shared-module/sidebar/sidebar.component.html
@@ -1,1 +1,7 @@
-<p>sidebar works!</p>
+<ul class="sideContainer">
+    <li>Products</li>
+    <li>Dispatcher</li>
+    <li>Support</li>
+    <li>Feedback</li>
+    <li>Profile</li>
+</ul>
