--- a/siot-app/src/app/shared-module/header/header.component.html
+++ b/siot-app/src/app/shared-module/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
     <div class="logo-nav">
-        <h1>Product <br>Tracking App</h1>
+        <h1>Product <mat-icon class="icon">send</mat-icon> <br>Tracking App</h1>
         <ul class="sideContainer">
             <li>Dashboard</li>
             <li>History</li>
