--- a/siot-app/src/app/shared-module/header/header.component.scss
+++ b/siot-app/src/app/shared-module/header/header.component.scss
@@ -54,3 +54,9 @@ h1 {
     font-size: 1.2rem;
     line-height: normal;
 }
+
+.icon{
+    font-size: 20px;
+    color: #513387;
+    transform: rotate(-40deg);
+}
