--- a/siot-app/src/app/login/login.component.scss
+++ b/siot-app/src/app/login/login.component.scss
@@ -1,50 +1,31 @@
-.parent-container {
+.container {
+    display: flex;
     width: 100%;
     height: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    background: linear-gradient(to right, rgb(83, 9, 94), rgb(128, 26, 144), rgb(164, 30, 185), rgb(223, 72, 246), rgb(223, 72, 246), rgb(164, 30, 185), rgb(128, 26, 144), rgb(83, 9, 94));
-}
-
-.container {
-    border-radius: 25px;
-    display: grid;
-    width: 40%;
-    height: 70%;
     padding: 0;
     margin: 0;
-    grid-template: 1fr/ 1fr;
-    -webkit-box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.4);
-    box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.4);
 }
 
-h1 {
-    font-size: 3.5rem;
-    font-weight: 100;
-    color: #000;
-    padding-bottom: 0.3em;
-}
-
-.hyperlink {
-    text-decoration: none;
-    color: #3366CC;
+.loginFillerImage {
+    background: linear-gradient(to right, #6745a7, #513387, #4b2f80, #3c2369);
+    background-size: cover;
+    align-self: flex-start;
+    width: 60%;
+    height: 100%;
+    float: right;
 }
 
 .loginBox {
-    background: rgba(255, 255, 255, 0.847);
     justify-items: center;
-    width: 100%;
+    width: 40%;
     height: 100%;
     float: left;
-    overflow: auto;
-    border-radius: 15px;
 }
 
 .loginButton {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     width: 100%;
-    background: rgb(83, 9, 94);
+    background: #513387;
     color: #fff;
 }
 
@@ -65,18 +46,18 @@ h1 {
     font-size: larger;
     color: #000000;
     width: 100%;
-    border-color:rgb(83, 9, 94);
+    border-color:#513387;
     margin-top: 1.5em;
     margin-bottom: -1em;
 }
 
 .mat-card {
-    width: 70%;
+    width: 50%;
     text-align: center;
-    max-height: 50px;
+    max-height: 600px;
     box-shadow: none;
     margin-top: 2rem;
-    background: rgba(255, 255, 255, 0.009);
+    background: white;
 
 }
 
@@ -91,4 +72,29 @@ h1 {
 
 .mat-error {
     height: 0px;
+}
+.icon{
+    font-size: 50px;
+    color: #513387;
+    transform: rotate(-40deg);
+}
+
+.register {
+    // text-decoration: none;
+    // color: blue;
+    padding-top: 3rem;
+    display: block;
+}
+
+h1 {
+    font-size: 2.8rem;
+    font-weight: 100;
+    color: #000;
+    padding-bottom: 0.5em;
+    line-height: 1;
+}
+
+.hyperlink {
+    text-decoration: none;
+    color: #3366CC;
 }
