--- a/siot-app/src/app/register/register.component.html
+++ b/siot-app/src/app/register/register.component.html
@@ -1,10 +1,11 @@
-<div class='parent-container'>
-    <div class='container'>
+<div class='container'>
+        <div class="registerFillerImage">
+        </div>
 
         <div class="signupBox" align="center">
             <mat-card class='mat-elevation-z0'>
                 <mat-card-title>
-                    <p class="head">SignUp Here</p>
+                    <h1>Product <mat-icon class="icon">send</mat-icon> <br> Tracking App </h1>
                 </mat-card-title>
                 
                 <form class = "reg-form" #regAuthForm="ngForm">
@@ -264,7 +265,6 @@
             </mat-card>
         </div>
     </div>
-</div>
     
 
 
