--- a/siot-app/src/app/register/register.component.scss
+++ b/siot-app/src/app/register/register.component.scss
@@ -1,41 +1,32 @@
-.parent-container {
+.container {
+    display: flex;
     width: 100%;
     height: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    background: linear-gradient(to right, rgb(83, 9, 94), rgb(128, 26, 144), rgb(164, 30, 185), rgb(223, 72, 246), rgb(223, 72, 246), rgb(164, 30, 185), rgb(128, 26, 144), rgb(83, 9, 94));
-}
-
-.container {
-    border-radius: 25px;
-    display: grid;
-    width: 60%;
-    height: 80%;
     padding: 0;
     margin: 0;
-    grid-template: 1fr/ 1fr;
-    -webkit-box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.4);
-    box-shadow: 0 0 30px 1px rgba(0, 0, 0, 0.4);
 }
 
+.registerFillerImage {
+    background: linear-gradient(to right, #6745a7, #513387, #4b2f80, #3c2369);
+    background-size: cover;
+    align-self: flex-start;
+    width: 60%;
+    height: 100%;
+    float: right;
+}
 .signupBox {
-    background: rgba(255, 255, 255, 0.847);
-    display: grid;
     justify-items: center;
-    align-items: center;
-    width: 100%;
+    width: 40%;
     height: 100%;
     float: left;
-    overflow: auto;
-    border-radius: 15px;
 }
 
-.head {
-    font-size: 2.5rem;
+h1 {
+    font-size: 2.8rem;
     font-weight: 100;
     color: #000;
-    padding-bottom: 0.3em;
+    padding-bottom: 0em;
+    line-height:0.9;
 }
 
 .hyperlink {
@@ -62,42 +53,11 @@
     display: block;
 }
 
-.full-width {
-    width: 100%;
-    display: grid;
-    grid-template: 1fr/ 1fr;
-}
-
-.mat-card {
-    width: 70%;
-    max-height: 600px;
-    margin-top: 1.3em;
-    background: rgba(255, 255, 255, 0.009);
-}
-
-.mat-card-title {
-    padding-top: 0.1em;
-    padding-bottom: 0.1em;
-}
-
-.mat-card-content {
-    width: 100%;
-}
-
-.mat-form-field {
-    font-size: larger;
-    color: #000000;
-    border-color: rgb(83, 9, 94);
-    margin-top: 1.5em;
-    margin-bottom: -1em;
-}
-
-
-
 .loginButton {
     /* margin-top: 1.5rem; */
+    margin-top: 1rem;
     width: 100%;
-    background: rgb(83, 9, 94);
+    background: #513387;
     color: #fff;
 }
 
@@ -115,4 +75,40 @@
 .login {
     padding-top: 1rem;
     display: block;
+}
+.mat-form-field {
+    font-size: larger;
+    color: #513387;
+    width: 95%;
+    border-color:#513387;
+    margin-top: 1.5em;
+    margin-bottom: -1em;
+}
+
+.mat-card {
+    width: 70%;
+    text-align: center;
+    max-height: 600px;
+    box-shadow: none;
+    margin-top: 2rem;
+    background: white;
+
+}
+
+.mat-card-title {
+    padding-top: 10%;
+}
+
+.mat-card-content {
+    padding-top: 10%;
+
+}
+
+.mat-error {
+    height: 0px;
+}
+.icon{
+    font-size: 50px;
+    color: #513387;
+    transform: rotate(-40deg);
 }
