- Completed everything except Map View in "Product Details." - Added "Add Product." - Added "Supplier Profile."

--- a/siot-app/src/app/supplier/product-details/product-details.component.html
+++ b/siot-app/src/app/supplier/product-details/product-details.component.html
@@ -20,7 +20,32 @@
 
         <div class="product-specifications">
             <h3>Product Specifications</h3>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Aenean maximus diam eu felis maximus posuere. Ut vitae rutrum orci. 
+                Donec a mollis quam, quis efficitur diam. Aliquam erat volutpat. 
+                Donec risus metus, ultrices elementum urna ac, posuere pellentesque risus. 
+                Donec tempus auctor vehicula. Vestibulum pretium ullamcorper nunc sed faucibus.</p>
+        </div>
+
+        <hr>
+
+        <div class="details-section">
+            <div>
+                <h2>Supplier name</h2>
+                <button mat-flat-button>View supplier details</button>
+            </div>
+            <div>
+                <h2>Dispatcher name</h2>
+                <button mat-flat-button>View dispatcher details</button>
+            </div>
+            <div>
+                <h2>Review this product</h2>
+                <button mat-flat-button>Write a Review</button>
+            </div>
+            <div>
+                <h2>Support</h2>
+                <button mat-flat-button>Need Help?</button>
+            </div>
         </div>
 
     </div>
