--- a/siot-app/src/app/admin/user-details/user-details.component.scss
+++ b/siot-app/src/app/admin/user-details/user-details.component.scss
@@ -3,12 +3,17 @@
     width: 95%;
     margin-top: 8em;
     margin-left: 3em;
-    text-align: center;
 }
 
 .header {
     display: grid;
     grid-template: 1fr/ 1.25fr 3.5fr 1fr;
+}
+
+table {
+    margin-top: 4em;
+    width: 100%;
+    grid-column: span 2;
 }
 
 .mat-elevation-z8 {
@@ -19,27 +24,10 @@
     border-radius: 10px;
 }
 
-table {
-    margin-top: 4em;
-    width: 100%;
-    grid-column: span 2;
-}
-
 h1 {
     font-size: 2.5rem;
     font-weight: 100;
     align-self: center;
-}
-
-.addbutton {
-    background-color: #513387;
-    width: fit-content;
-    height: 3.25rem;
-    justify-self: right;
-}
-
-.addbutton:hover {
-    background-color: #7758b1;
 }
 
 .empty {
@@ -61,7 +49,7 @@ h1 {
     border-top-left-radius: 10px;
 }
 
-.customHeaderDisable {
+.customHeaderStatus {
     background-color: #513387;
     color: white;
     font-size: 18px;
@@ -95,19 +83,19 @@ h1 {
     border-left: 1px solid #513387;
 }
 
-.customColumnName {
+.customColumnProduct {
     width: 25%;
 }
 
-.customColumnEmail {
-    width: 25%;
-}
-
-.customColumnPhNo {
-    width: 20%;
-}
-
-.customColumnDisable {
+.customColumnAmount {
     width: 15%;
+}
+
+.customColumnLocation {
+    width: 25%;
+}
+
+.customColumnStatus {
+    width: 25%;
     border-right: 1px solid #513387;
 }
