- Added Feedback - Improved "Add Product" preview image

--- a/siot-app/src/app/supplier/add-product/add-product.component.html
+++ b/siot-app/src/app/supplier/add-product/add-product.component.html
@@ -53,7 +53,7 @@
 
             <div class="product-image-details">
 
-                <div>
+                <div class="upload-image">
                     <button 
                         mat-flat-button
                         class="outline-button"
