--- a/siot-app/src/app/supplier/add-product/add-product.component.scss
+++ b/siot-app/src/app/supplier/add-product/add-product.component.scss
@@ -31,6 +31,10 @@
     grid-template: 1fr 4fr/ 1fr;
 }
 
+.upload-image {
+    
+}
+
 .product-image-details>div>button {
     width: 100%;
     padding: 0.4em;
@@ -79,5 +83,7 @@ h1 {
 }
 
 img {
-    width: 300px;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 280px;
 }
