- Added "Add Dispatcher"

--- a/siot-app/src/app/supplier/product-details/product-details.component.scss
+++ b/siot-app/src/app/supplier/product-details/product-details.component.scss
@@ -29,3 +29,11 @@
     border-color: purple;
     border-style: solid;
 }
+
+h1 {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #513387;
+    padding-bottom: 0.5em;
+    line-height: 1;
+}
