Added Forgot Password and Reset Password
Modified css of consumer-feedback

--- a/siot-app/src/app/consumer/consumer-feedback/consumer-feedback.component.scss
+++ b/siot-app/src/app/consumer/consumer-feedback/consumer-feedback.component.scss
@@ -32,18 +32,25 @@ p {
     margin: 20px;
 }
 
+mat-form-field{
+    margin: 13px;
+    width: 95%;
+    color: black;
+}
+
 button {
     background-color: #513387;
     color: white;
-    margin-left: 20px;
+    margin-left: 29px;
     margin-bottom: 20px;
 }
 
 mat-icon {
     color: gray;
-    font-size: 27px;
+    font-size: 30px;
     cursor: pointer;
     transition: color 0.2s;
+    margin: 4px;
 }
 
 mat-icon:hover {
